apps/cerberus/base/cerberus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cerberus
  namespace: cerberus
  labels:
    app: cerberus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cerberus
  template:
    metadata:
      labels:
        app: cerberus
    spec:
      serviceAccountName: cerberus
      containers:
        - name: cerberus
          securityContext:
            privileged: true
          image: quay.io/chaos-kubox/cerberus:latest
          command: ["/bin/sh", "-c"]
          args: ["python3 start_cerberus.py -c config/config.yaml"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: "/root/.kube"
              name: kube-config
            - mountPath: "/root/cerberus/config"
              name: cerberus-config
          readinessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 30
      volumes:
        - name: kube-config
          configMap:
            name: kube-config
        - name: cerberus-config
          configMap:
            name: cerberus-config
