apps/cerberus/base/cerberus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cerberus
  namespace: cerberus
  labels:
    app: cerberus
spec:
  type: ClusterIP
  selector:
    app: cerberus
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
